docs/pss-inventory/retrieved-mdapi/unpackaged/objects/sfsp__SalesUserAccess__c.object
<CustomObject>
    <fields>
        <fullName>sfsp__AccessLevel__c</fullName>
        <label>Access Level</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Editor</fullName>
                    <default>true</default>
                    <label>Editor</label>
                </value>
                <value>
                    <fullName>Viewer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sfsp__ApplicationAccess__c</fullName>
        <label>Application Access</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Territory Planning</fullName>
                </value>
                <value>
                    <fullName>Quota Planning</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sfsp__SalesNode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Node</label>
        <referenceTo>sfsp__SalesNode__c</referenceTo>
        <relationshipLabel>Sales Planning User Access</relationshipLabel>
        <relationshipName>SalesUserAccess</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfsp__SalesPlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Plan</label>
        <referenceTo>sfsp__SalesPlan__c</referenceTo>
        <relationshipLabel>Sales Planning User Access</relationshipLabel>
        <relationshipName>SalesUserAccess</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfsp__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Sales Planning User Access</relationshipLabel>
        <relationshipName>SalesUserAccess</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Sales Planning User Access</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Planning User Access</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>